* Refactor into a supported MQTT client library * Enable VCLU start in a first available network interface if not specified * Refactor root topic structure * Optimize Lua loading
Signed-off-by: Piotr Sobiech <piotr@sobie.ch>